Ensure text remains visible during webfont loading: https://developer.chrome.com/docs/lighthouse/performance/font-display/?utm_source=lighthouse&utm_medium=devtools

--- a/app/src/assets/styles/fonts.scss
+++ b/app/src/assets/styles/fonts.scss
@@ -1,25 +1,28 @@
 @import 'variables.scss';
 
 @font-face {
-  font-family: 'Fira Sans Condensed';
-  src: url('/FiraSansCondensed-SemiBold.ttf') format('truetype');
-  font-weight: $semi-bold-font;
+    font-family: 'Fira Sans Condensed';
+    src: url('/FiraSansCondensed-SemiBold.ttf') format('truetype');
+    font-weight: $semi-bold-font;
+    font-display: swap;
 }
 
 @font-face {
-  font-family: 'Fira Sans Condensed';
-  src: url('/FiraSansCondensed-Bold.ttf') format('truetype');
-  font-weight: $bold-font;
+    font-family: 'Fira Sans Condensed';
+    src: url('/FiraSansCondensed-Bold.ttf') format('truetype');
+    font-weight: $bold-font;
+    font-display: swap;
 }
 
 @font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: $regular-font;
-  src: local('Material Icons'),
-    local('MaterialIcons-Outlined'),
-    url('/MaterialSymbolsOutlined.woff2') format('woff2'),
-    url('/MaterialSymbolsOutlined.ttf') format('truetype');
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: $regular-font;
+    src: local('Material Icons'),
+        local('MaterialIcons-Outlined'),
+        url('/MaterialSymbolsOutlined.woff2') format('woff2'),
+        url('/MaterialSymbolsOutlined.ttf') format('truetype');
+    font-display: swap;
 }
   
 .material-symbols-outlined {
@@ -34,10 +37,11 @@
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
+    font-display: swap;
     font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     -moz-osx-font-smoothing: grayscale;
 
-    font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48
+    font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
