--- a/app/src/assets/styles/global.scss
+++ b/app/src/assets/styles/global.scss
@@ -18,7 +18,6 @@ h6 {
     font-family: $title-font;
     font-weight: $bold-font;
     line-height: 1.2;
-    font-display: swap;
 
     color: $high-emphasis-color;
     margin-bottom: 12px;
@@ -50,7 +49,6 @@ textarea,
 div {
     font-family: $body-font;
     font-size: $body-font-size;
-    font-display: swap;
 
     color: $medium-emphasis-color;
 
